--- a/p3/index.html
+++ b/p3/index.html
@@ -114,7 +114,7 @@
 					<div class="card-body">
 						<h5 class="card-title">Card title</h5>
 						<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-						<a href="#" class="btn btn-blue">Más información</a>
+						<a href="#" class="btn btn-info">Más información</a>
 					</div>
 				</div>
 				<div class="card col-md-3 col-sm-6 col-xs-12 mx-sm-2 mx-md-2 mb-4" style="width:18rem">
@@ -122,7 +122,7 @@
 					<div class="card-body">
 						<h5 class="card-title">Card title</h5>
 						<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-						<a href="#" class="btn btn-blue">Más información</a>
+						<a href="#" class="btn btn-info">Más información</a>
 					</div>
 				</div>
 				<div class="card col-md-3 col-sm-12 col-xs-12 mx-sm-2 mx-md-4 mb-4" style="width:18rem">
@@ -130,7 +130,7 @@
 					<div class="card-body">
 						<h5 class="card-title">Card title</h5>
 						<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-						<a href="#" class="btn btn-blue">Más información</a>
+						<a href="#" class="btn btn-info">Más información</a>
 					</div>
 				</div>
 			</div>
@@ -143,7 +143,7 @@
 			<p class="col-md-12 lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
 			<hr>
 			<p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-			<button class="btn btn-blue mb-4" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+			<button class="btn btn-info mb-4" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
 				Learn More
 			</button>
 		</div>
@@ -162,7 +162,7 @@
 			<div class="col col-12 col-md-6 col-sm-12 col-xs-12 mb-2">
 				<div class="accordion accordion-flush" id="accordionFlushExample">
 					<div class="accordion-item">
-						<h2 class="accordion-header">
+						<h2 class="accordion-header bs-info">
 							<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="true" aria-controls="flush-collapseOne">
 								Collapsible Group Item #1
 							</button>
@@ -174,7 +174,7 @@
 						</div>
 					</div>
 					<div class="accordion-item">
-						<h2 class="accordion-header">
+						<h2 class="accordion-header bs-info">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
 								Collapsible Group Item #2
 							</button>
@@ -186,7 +186,7 @@
 						</div>
 					</div>
 					<div class="accordion-item">
-						<h2 class="accordion-header">
+						<h2 class="accordion-header bs-info bs-info">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
 								Collapsible Group Item #3
 							</button>
