#016 - practice 04 : add more cards and things

--- a/index.html
+++ b/index.html
@@ -101,6 +101,16 @@
                                     </div>
                                 </div>`);
                             }
+                            document.write(`
+                                <div class='col col-md-3 col-sm-6 col-xs-12 mb-4'>
+                                    <div class='card'>
+                                        <div class='card-header'><h4 class='card-title'>Pr&aacute;ctica B4_v2</h4></div>
+                                        <div class='card-body'>
+                                            <a href='https://github.com/Guada8a/PrograMovil/tree/main/p4_again' class='btn btn-outline-success rounded-pill mb-2 mx-2' target='_blank'>Ir a ruta</a>
+                                            <a href='https://guada8a.github.io/PrograMovil/p4_again/' class='btn btn-outline-warning rounded-pill mb-2' target='_blank'>Deployment</a>
+                                        </div>
+                                    </div>
+                                </div>`);
                         </script>
                 </div>
             </div>
